# hw15_kkmeans

./: .travis.yml  CMakeLists.txt  README.md  draw.py  main.cpp  run.sh  sky.txt
